refactor: 일정 조회 시, response에 userRole 추가